# rsh

./: Cargo.toml  README.md  history.txt
src/: cli.rs  commands.rs  completion.rs  context.rs  environment.rs  error.rs  history.txt  main.rs  parselex.rs  parser.rs  rushhelper.rs  stream.rs  types.rs  utils.rs  views.rs
src/commands/: cd.rs  limit.rs  ls.rs  ps.rs  rev.rs  sortby.rs  take.rs
src/completions/: ideas.txt
src/parselex/: lex.rs  parser.rs
src/parser/: possible_syntax.txt
src/types/: datadict.rs  descriptor.rs  direntry.rs  primary.rs  process.rs
src/views/: baseview.rs  table.rs
