[package]
name = "rsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.0.0"
derive-new = "0.5"
tabled = "0.10.0"
chrono = {version = "0.4.23", features = ["std"]}
sysinfo = "0.3.15"
ansi_term = "0.12.1"
chumsky = "0.8.0"
home = "0.5.4"
